<resources>
    <string name="app_name">Dzień Wydziału EEIA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>

    <string name="bottom_nav_divider_desc">Bottom navigation divider</string>
    <string name="qr_scan_desc">QR Scanner</string>
    <string name="logo_desc">Logo</string>
    <string name="blob_desc">Blob</string>
    <string name="background_desc">Background</string>
    <string name="event_card_image_desc">Event Card Background Picture</string>
    <string name="weeia_logo_desc">WEEIA</string>
    <string name="wrs_weeia_logo_desc">WRS WEEIA</string>
    <string name="zf_logo_desc">ZF</string>
    <string name="commerzbank_logo_desc">Commerzbank</string>
    <string name="todo">TODO</string>
    <string name="qr_code">QR Code</string>

    <string name="upcoming_events_title">Upcoming events:</string>
    <string name="upcoming_event_title">Upcoming event:</string>
    <string name="example_date_with_time">31.03.2023 10:00 – 11:30</string>
    <string name="event_card_title_temp">Szkolenie</string>
    <string name="event_card_desc_temp">Temat szkolenia</string>
    <string name="sign_up">Sign up</string>

    <string name="available_tasks_title">Available tasks:</string>
    <string name="current_points">You have 0 points!</string>
    <string name="button_points">10 Points</string>
    <string name="scan_to_complete">Scan QR code to complete task</string>
    <string name="tips_to_complete">Tips to complete, these are tips to complete </string>
    <string name="welcome_on_weeia">Welcome on WEEIA!</string>
    <string name="example_task_title">Task 1</string>
    <string name="see_all">See all</string>

    <string name="contact_us">Contact us</string>
    <string name="some_more_questions">Some questions?</string>
    <string name="app_language">Application language</string>
    <string name="info">Info</string>
    <string name="information">Information</string>
    <string name="app_id">App ID: #</string>
    <string name="welcome_in_dw_app">Hi! Welcome to DW App!</string>
    <string name="info_app_desc">There are some information about event, app and your profile.</string>
    <string name="you_have_points">You have 0 points</string>
    <string name="organizers">Organizers</string>
    <string name="partners">Partners</string>

    <string name="task_completed">Task completed!</string>
    <string name="task_already_done">Task already done!</string>
    <string name="wrong_code">Wrong code!</string>
    <string name="ok">OK</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_won_an_award">You won an award!</string>
    <string name="come_and_collect_it">Come to our office to collect it!</string>
    <string name="sorry_didnt_win">Sorry! You didn\'t win any award :(</string>
    <string name="rules_are_simple">Rules are simple:</string>
    <string name="collect_points_rule">Collect points by scanning QR codes during Dzień Wydziału on 31st March 2023</string>
    <string name="we_will_inform_rule">We will inform winners with most points after the event in the Home section</string>

</resources>