<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="18dp"
    app:cardElevation="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tasksConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tasksCardPointsButton"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/event_card_sign_up_button"
            android:backgroundTint="@null"
            android:elevation="1dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/button_points"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/tasksCardImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.2"
            android:contentDescription="@string/event_card_image_desc"
            android:elevation="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/event_card_background" />

        <ImageView
            android:id="@+id/tasksQRCodeImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/qr_code"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tasksCardImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38"
            app:srcCompat="@drawable/tasks_qr_code" />

        <TextView
            android:id="@+id/tasksQRCodeTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:elevation="1dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/scan_to_complete"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="@+id/tasksQRCodeImageView"
            app:layout_constraintStart_toStartOf="@+id/tasksQRCodeImageView"
            app:layout_constraintTop_toBottomOf="@+id/tasksQRCodeImageView" />

        <TextView
            android:id="@+id/tasksTipsTextView"
            android:layout_width="172dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/tips_to_complete"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@+id/tasksCardPointsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tasksTitleTextView" />

        <TextView
            android:id="@+id/tasksTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/welcome_on_weeia"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tasksNumberTextView" />

        <TextView
            android:id="@+id/tasksNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/example_task_title"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>