<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_fragment_background"
    tools:context=".Fragment.DialogFragment.WinDialogFragment">

    <ImageView
        android:id="@+id/winIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/task_already_done"
        android:src="@drawable/ic_win"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/you_won_an_award"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winIcon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/winOKButton"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/win_button_background"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/come_and_collect_it"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>